Fixed box spacing in portfolio section

--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,6 @@ body {
 	padding-bottom: 10px;
 }
 
-.box {
-	padding: 15px;
-}
-
 h3 {
 	font-size: 1.4em;
 }
